package patterns.behavioral.visitor;

public interface Feeder {
	
    public void feed(Animal a);
}